# -csv-Analyzer-project

./: .gitignore  README.md  Weekly_Project_NLP_CLI.md  app.py  main.py  pyproject.toml  requirements.txt
nlp_tool/: eda.py  embedding.py  preprocessing.py  training.py
